latex2mmlc/tests/snapshots/wiki_test__wiki001.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: f(x) = x^2
---
<math>
    <mi>f</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <msup>
        <mi>x</mi>
        <mn>2</mn>
    </msup>
</math>
