latex2mmlc/tests/snapshots/wiki_test__wiki006.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\dot{a}, \\ddot{a}, \\acute{a}, \\grave{a}"
---
<math>
    <mover>
        <mi>a</mi>
        <mo accent="true">˙</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true">¨</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true">´</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true">`</mo>
    </mover>
</math>
