latex2mmlc/tests/snapshots/wiki_test__wiki007.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\check{a}, \\breve{a}, \\tilde{a}, \\bar{a}"
---
<math>
    <mover>
        <mi>a</mi>
        <mo accent="true" stretchy="false">ˇ</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true">˘</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true" stretchy="false">~</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true" stretchy="false">¯</mo>
    </mover>
</math>
