latex2mmlc/tests/snapshots/wiki_test__wiki010.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\ln c, \\lg d = \\log e, \\log_{10} f"
---
<math>
    <mi>ln</mi>
    <mi>c</mi>
    <mo>,</mo>
    <mi>lg</mi>
    <mi>d</mi>
    <mo>=</mo>
    <mi>log</mi>
    <mi>e</mi>
    <mo>,</mo>
    <msub>
        <mi>log</mi>
        <mn>10</mn>
    </msub>
    <mi>f</mi>
</math>
