latex2mmlc/tests/snapshots/wiki_test__wiki012.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\arcsin h, \\arccos i, \\arctan j"
---
<math>
    <mi>arcsin</mi>
    <mi>h</mi>
    <mo>,</mo>
    <mi>arccos</mi>
    <mi>i</mi>
    <mo>,</mo>
    <mi>arctan</mi>
    <mi>j</mi>
</math>
