latex2mmlc/tests/snapshots/wiki_test__wiki013.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\sinh k, \\cosh l, \\tanh m, \\coth n"
---
<math>
    <mi>sinh</mi>
    <mi>k</mi>
    <mo>,</mo>
    <mi>cosh</mi>
    <mi>l</mi>
    <mo>,</mo>
    <mi>tanh</mi>
    <mi>m</mi>
    <mo>,</mo>
    <mi>coth</mi>
    <mi>n</mi>
</math>
